--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.10.0
 Django==3.2.7
 django-bootstrap4==3.0.1
 django-environ==0.7.0
+gunicorn==20.1.0
 Pillow==8.3.2
 pytz==2021.1
 soupsieve==2.2.1
